--- a/reviewer/accounts/templates/user_detail.html
+++ b/reviewer/accounts/templates/user_detail.html
@@ -4,37 +4,18 @@
 {% block menu %}
 {% if user.is_authenticated %}
 
-    <li><a href=" {% url 'change' user_obj.pk %}" class="btn btn-primary">Редактировать</a></li>
-    <li><a href="#" class="btn btn-primary">Смена пароля</a></li>
+    <li><a href=" {% url 'change' user_obj.pk %}">Редактировать</a></li>
+    <li><a href="#">Смена пароля</a></li>
 
 {% endif %}
 {% endblock %}
 
 {% block content %}
-{% if user_obj in user_obj.subscriptions.all %}
-    <a href="{% url 'follow' user_obj.pk %}">Отписаться</a>
-{% else %}
-    <a href="{% url 'follow' user_obj.pk %}">Подписаться</a>
-{% endif %}
-
-    Публикаций: {{ user_obj.posts.all.count }}
-    Подписки: {{ user_obj.subscribers.all.count }}
-    Подписчики: {{ user_obj.subscriptions.all.count }}
-
 
     <h1>Личная страница пользователя {{ user_obj.get_full_name|default:user_obj.username }}</h1>
-    {% if user_obj.avatar %}
-        <img class="avatar" src="{{ user_obj.avatar.url }}" width="150px" height="150px" alt="user picture">
-    {% else %}
-        <img width="150px" height="150px" src="https://abrakadabra.fun/uploads/posts/2021-12/thumbs/1640528649_39-abrakadabra-fun-p-serii-chelovek-na-avu-44.jpg" alt="user picture">
-    {% endif %}
-    <p>Имя пользователя: {{ user_obj.username }}</p>
+    <p>Логин: {{ user_obj.username }}</p>
     <p>Имя: {{ user_obj.get_full_name }}</p>
-    <p>Обо мне: {{ user_obj.about_me }}</p>
+    <p>Email: {{ user_obj.email }}</p>
 
-    {% for post in user_obj.posts.all %}
-    <a href="{% url 'post_detail' post.pk %}"><img style="width:250px;height:250px" src="{{ post.image.url }}" alt=""></a>
-
-    {% endfor %}
 
 {% endblock %}
