--- a/reviewer/products/templates/index.html
+++ b/reviewer/products/templates/index.html
@@ -14,7 +14,11 @@
             {% for product in products %}
             <div class="products">
                 <div class="main-img">
+                    {% if product.image %}
                     <img src="{{ product.image.url }}" alt="product image">
+                    {% else %}
+                    <img src="https://vaksi.by/design/verona/images/no_image.png" alt="no product image">
+                    {% endif %}
                 </div>
                 <h4>{{ product.title }}</h4>
                 <h4>Категория: {{ product.get_category_display }}</h4>
