--- a/reviewer/products/templates/products/product_create.html
+++ b/reviewer/products/templates/products/product_create.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}Post Create{% endblock %}
 {% block content %}
-    <h1>New Post</h1>
     <div class="form">
+        <h1>Создание продукта</h1>
         <form action="{% url 'product_create' %}" method="post" enctype="multipart/form-data">
-            {% include 'partial/post_form.html' with button_text='Создать' %}
+            {% include 'partial/product_form.html' with button_text="Создать" button_class="btn btn-success" %}
         </form>
     </div>
 {% endblock %}
