--- a/reviewer/products/templates/products/product_detail.html
+++ b/reviewer/products/templates/products/product_detail.html
@@ -1,11 +1,24 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
-{% block content %}
 
+{% block content %}
 <div class="container">
+    {% if user.is_authenticated %}
+    <a href="{% url 'product_update' product.pk %}" class="btn btn-outline-primary">Редактировать продукт</a>
+    <p>
+    <form method="POST" action="{% url 'product_delete' product.pk %}">
+        {% csrf_token %}
+        <input type="submit" class="btn btn-outline-danger" value="Удалить продукт">
+    </form>
+    </p>
+    {% endif %}
     <div class="details">
         <div class="details-img">
-            <img src="{{ product.image.url }}" alt="">
+            {% if product.image %}
+            <img src="{{ product.image.url }}" alt="product image">
+            {% else %}
+            <img src="https://vaksi.by/design/verona/images/no_image.png" alt="no product image">
+            {% endif %}
         </div>
         <div class="details-content">
             <h3>{{ product.title }}</h3>
