--- a/reviewer/products/templates/products/product_update.html
+++ b/reviewer/products/templates/products/product_update.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Post Create{% endblock %}
+{% block content %}
+    <h1>New Post</h1>
+    <div class="form">
+        <form action="{% url 'product_update' product.pk %}" method="post" enctype="multipart/form-data">
+            {% include 'partial/product_form.html' with button_text="Редактировать" button_class="btn btn-success" %}
+        </form>
+    </div>
+{% endblock %}
