--- a/reviewer/products/templates/products/product_update.html
+++ b/reviewer/products/templates/products/product_update.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Post Create{% endblock %}
 {% block content %}
-    <h1>New Post</h1>
     <div class="form">
+        <h1>Редактирование продукта</h1>
         <form action="{% url 'product_update' product.pk %}" method="post" enctype="multipart/form-data">
             {% include 'partial/product_form.html' with button_text="Редактировать" button_class="btn btn-success" %}
         </form>
