--- a/reviewer/static/css/style.css
+++ b/reviewer/static/css/style.css
@@ -187,3 +187,12 @@ button {
     border: solid 1px gray;
 }
 
+.view-comment {
+   margin-bottom: 30px;
+   margin-top: 30px;
+   box-shadow: 0px 0px 10px 0px gray;
+   padding: 25px;
+   border-radius: 35px;
+   display: flex;
+   align-items: center;
+}
