--- a/reviewer/products/templates/index.html
+++ b/reviewer/products/templates/index.html
@@ -2,9 +2,11 @@
 {% load django_bootstrap5 %}
 {% block menu %}
     {% if user.is_authenticated %}
+        {% if perms.products.add_product %}
         <li>
             <a href="{% url 'product_create' %}">Добавить продукт</a>
         </li>
+        {% endif %}
     {% endif %}
 {% endblock %}
 {% block content %}
