--- a/reviewer/products/templates/products/product_detail.html
+++ b/reviewer/products/templates/products/product_detail.html
@@ -4,13 +4,17 @@
 {% block content %}
 <div class="container">
     {% if user.is_authenticated %}
-    <a href="{% url 'product_update' product.pk %}" class="btn btn-outline-primary">Редактировать продукт</a>
-    <p>
-    <form method="POST" action="{% url 'product_delete' product.pk %}">
-        {% csrf_token %}
-        <input type="submit" class="btn btn-outline-danger" value="Удалить продукт">
-    </form>
-    </p>
+        {% if perms.products.change_product %}
+            <a href="{% url 'product_update' product.pk %}" class="btn btn-outline-primary">Редактировать продукт</a>
+        {% endif %}
+        {% if perms.products.delete_product %}
+            <p>
+            <form method="POST" action="{% url 'product_delete' product.pk %}">
+                {% csrf_token %}
+                <input type="submit" class="btn btn-outline-danger" value="Удалить продукт">
+            </form>
+            </p>
+        {% endif %}
     {% endif %}
     <div class="details">
         <div class="details-img">
@@ -24,6 +28,7 @@
             <h3>{{ product.title }}</h3>
             <h4>Категория: {{ product.get_category_display }}</h4>
             <p>Описание: {{ product.description }}</p>
+            <p>Средний рейтинг: </p>
             <p style="font-size:15px; font-style:italic; color:grey">добавлено {{ product.created_at }}</p>
         </div>
     </div>
@@ -37,7 +42,7 @@
     <div>
         {% for review in product.reviews.all %}
         <div class="row">
-            <h3>Пользователь - {{ review.author.username }}</h3>
+            <h3>Пользователь - {{ review.author.username }} <span style="font-size:10px; font-style:italic; color:grey">создан {{ review.created_at }}</span></h3>
             <p style="font-size:15px">
                 Поставил оценку - {{ review.rating }}
             </p>
