--- a/reviewer/accounts/templates/user_change.html
+++ b/reviewer/accounts/templates/user_change.html
@@ -12,6 +12,6 @@
         {% csrf_token %}
         {% include 'partial/form.html' with form=form fields_only=True %}
         <br>
-        <input type="submit" value="Редактировать">
+        <input type="submit" class="btn btn-success" value="Редактировать">
     </form>
 {% endblock %}
